# scientific_pdf_loader

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/: main.py
src/scientific_pdf_loader/: pdf_reader.py
src/scientific_pdf_loader/tests/: test_pdf_reader.py
src/tests/: test_pdf_reader.py
tests/: test_pdf_reader.py
